--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 03:54:00 PM</p>
+    <p class="lastupdate">09/03/2020 03:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">99.6&#176;F</td>
+        <td class="data">99.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">99.6&#176;F</td>
+        <td class="data">99.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">99.6&#176;F</td>
+        <td class="data">99.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.9&#176;F</td>
+        <td class="data">54.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.858 inHg (-0.084)</td>
+        <td class="data">29.855 inHg (-0.082)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph N (0&#176;)</td>
+        <td class="data">3 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">94.4&#176;F</td>
+        <td class="data">99.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:26:02 AM">
             30.035</span><br/>
-          <span title="03:53:02 PM">
-            29.858</span>
+          <span title="03:58:02 PM">
+            29.855</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -317,8 +317,8 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/01/2020 12:00:01 AM">
-            29.857</span>
+          <span title="09/03/2020 03:58:02 PM">
+            29.855</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -470,32 +470,32 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:53:02 PM">
-            94.4</span><br/>
+          <span title="03:58:02 PM">
+            99.2</span><br/>
           <span title="06:56:02 AM">
             68.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:29:03 PM (Wednesday)">
-            98.4</span><br/>
+          <span title="03:58:02 PM (Thursday)">
+            99.2</span><br/>
           <span title="07:17:56 AM (Sunday)">
             64.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/02/2020 06:29:03 PM">
-            98.4</span><br/>
+          <span title="09/03/2020 03:58:02 PM">
+            99.2</span><br/>
           <span title="09/02/2020 07:08:02 AM">
             65.5</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/02/2020 06:29:03 PM">
-            98.4</span><br/>
+          <span title="09/03/2020 03:58:02 PM">
+            99.2</span><br/>
           <span title="08/07/2020 07:13:57 AM">
             62.0</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/02/2020 06:29:03 PM">
-            98.4</span><br/>
+          <span title="09/03/2020 03:58:02 PM">
+            99.2</span><br/>
           <span title="08/07/2020 07:13:57 AM">
             62.0</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="06:33:01 AM">
             57</span><br/>
-          <span title="03:52:02 PM">
-            36</span>
+          <span title="03:57:02 PM">
+            32</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:10:02 AM (Wednesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">81%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 1 hour, 7 minutes</td>
+      <td class="data">2 days, 1 hour, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 1 hour, 7 minutes</td>
+      <td class="data">2 days, 1 hour, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
