--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 03:54:00 PM</p>
+    <p class="lastupdate">09/03/2020 03:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -211,8 +211,8 @@
           <td class="units"> inHg</td>
           <td class="data new_row">30.035<br/>
             <span class="timestamp">08:26:02 AM</span><br/>
-            29.858<br/>
-            <span class="timestamp">03:53:02 PM</span>
+            29.855<br/>
+            <span class="timestamp">03:58:02 PM</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09:40:02 AM (Wednesday)</span><br/>
@@ -221,8 +221,8 @@
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09/02/2020 09:40:02 AM</span><br/>
-            29.857<br/>
-            <span class="timestamp">09/01/2020 12:00:01 AM</span>
+            29.855<br/>
+            <span class="timestamp">09/03/2020 03:58:02 PM</span>
           </td>
           <td class="data new_row">30.065<br/>
             <span class="timestamp">07/04/2020 08:07:00 AM</span><br/>
@@ -361,32 +361,32 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            94.4<br/>
-            <span class="timestamp">03:53:02 PM</span><br/>
+            99.2<br/>
+            <span class="timestamp">03:58:02 PM</span><br/>
             68.2<br/>
             <span class="timestamp">06:56:02 AM</span>
           </td>
           <td class="data new_row">
-            98.4<br/>
-            <span class="timestamp">06:29:03 PM (Wednesday)</span><br/>
+            99.2<br/>
+            <span class="timestamp">03:58:02 PM (Thursday)</span><br/>
             64.7<br/>
             <span class="timestamp">07:17:56 AM (Sunday)</span>
           </td>
           <td class="data new_row">
-            98.4<br/>
-            <span class="timestamp">09/02/2020 06:29:03 PM</span><br/>
+            99.2<br/>
+            <span class="timestamp">09/03/2020 03:58:02 PM</span><br/>
             65.5<br/>
             <span class="timestamp">09/02/2020 07:08:02 AM</span>
           </td>
           <td class="data new_row">
-            98.4<br/>
-            <span class="timestamp">09/02/2020 06:29:03 PM</span><br/>
+            99.2<br/>
+            <span class="timestamp">09/03/2020 03:58:02 PM</span><br/>
             62.0<br/>
             <span class="timestamp">08/07/2020 07:13:57 AM</span>
           </td>
           <td class="data new_row">
-            98.4<br/>
-            <span class="timestamp">09/02/2020 06:29:03 PM</span><br/>
+            99.2<br/>
+            <span class="timestamp">09/03/2020 03:58:02 PM</span><br/>
             62.0<br/>
             <span class="timestamp">08/07/2020 07:13:57 AM</span>
           </td>
@@ -398,8 +398,8 @@
           <td class="data new_row">
             57<br/>
             <span class="timestamp">06:33:01 AM</span><br/>
-            36<br/>
-            <span class="timestamp">03:52:02 PM</span>
+            32<br/>
+            <span class="timestamp">03:57:02 PM</span>
           </td>
           <td class="data new_row">
             63<br/>
